# RTL_benchmark

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DCO.md  Dockerfile  README.md  pyproject.toml  spec.txt
.claude/: settings.local.json
.github/workflows/: benchmark.yml
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/guides/: code-reuse-thinking-guide.md  cross-layer-thinking-guide.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/03-17-partial-suite-results-resume/: task.json
.trellis/tasks/03-17-pausable-jobs-progress-breakdown-ui/: task.json
.trellis/tasks/03-17-run-model-selection-verilogeval-fix/: task.json
.trellis/workspace/: index.md
.trellis/workspace/gary/: index.md  journal-1.md
benchmarks/: README.md
benchmarks/hdlbits/arithmetic/: popcount3.json
benchmarks/rtl/: add8.json  edge_detect.json
benchmarks/testbench/: counter_tb.json
configs/: pipeline.hdlbits.json  pipeline.industrial.json  pipeline.json  pipeline.open_complex.json  pipeline.realtime.json  pipeline.rtllm.json  pipeline.verilogeval.json
data/model_feeds/: open_models.json
data/problem_catalogs/: README.md  hdlbits_index.json  open_rtl_benchmarks.json
results/: leaderboard.json
src/rtl_benchmark/: __init__.py  cli.py  evaluator.py  importers.py  leaderboard.py  model_runner.py  model_sources.py  pipeline.py  problem_bank.py  scoring.py  types.py  utils.py  webapp.py
tests/: test_core.py  test_webapp.py
(+229 files in other folders)
